--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdU35td9FbVovMF3hVzI9_RVXFNzT90Oo&libraries=places"></script>
   </head>
   <body class="sidebar-collapse">
     <noscript>
